# AoC

./: .gitignore  LICENSE  Makefile  README.md  dune-project  main.opam
lib/misc/: array.ml  bfs.ml  dll.ml  dll.mli  dune  int.ml  list.ml  pos.ml  pos.mli  printers.ml  read_file.ml  string.ml  tuple.ml  utils.ml
lib/misc/read_file/: dune
lib/y2015/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune
lib/y2016/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune
lib/y2017/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune
lib/y2018/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  day17.ml  day18.ml  day19.ml  day25.ml  dune
test/: dune  test_utils.ml
test/y2015/expected/: day25.p1.txt  day25.p2.txt
test/y2015/source/: day01.ml  day02.ml  day03.ml  day07.ml  day08.ml  day09.ml  day10.ml  day13.ml  day14.ml  day15.ml  day21.ml  day22.ml  day23.ml  day24.ml  day25.ml  dune
test/y2015_test/: dune  y2015_test.ml
test/y2015_test/source/: day04.ml  day05.ml  day06.ml  day11.ml  day12.ml  day16.ml  day17.ml  day18.ml  day19.ml  day20.ml  dune
test/y2016/expected/: day08.p2.txt  day09.p2.txt  day17.p1.txt  day18.p2.txt  day19.p2.txt  day23.p2.txt  day25.p2.txt
test/y2016/source/: day01.ml  day03.ml  day04.ml  day05.ml  day06.ml  day08.ml  day10.ml  day11.ml  day12.ml  day15.ml  day16.ml  day19.ml  day20.ml  day21.ml  day22.ml  day23.ml  day24.ml  dune
test/y2016_test/: dune  y2016_test.ml
test/y2016_test/source/: day02.ml  day07.ml  day09.ml  day13.ml  day14.ml  day17.ml  day18.ml  day25.ml
test/y2017/expected/: day05.p2.txt  day07.p1.txt  day17.p2.txt  day19.p1.txt  day21.p2.txt  day25.p2.txt
test/y2017/txt/: day21.txt
test/y2018/expected/: day02.p2.txt  day07.p1.txt  day09.p2.txt  day10.p1.txt  day12.p2.txt  day13.p1.txt  day13.p2.txt  day14.p1.txt  day14.p2.txt  day25.p2.txt
