(library (name utils)
 (libraries str)
 (modules utils)
)

(library (name printers)
 (libraries str)
 (modules printers)
)

(library (name graph)
 (libraries str)
 (modules graph)
)

(library (name read_file)
 (libraries str)
 (modules read_file)
)

(library
 (name list)
 (modules list))

(library
 (name array)
 (modules array))

(library
 (name string)
 (modules string))

(library
 (name pos)
 (modules pos))
