(library (name utils)
 (libraries str)
 (modules utils)
)

(library (name printers)
 (libraries str)
 (modules printers)
)

(library (name bfs)
 (libraries str pos list)
 (modules bfs)
)

(library (name read_file)
 (libraries str)
 (modules read_file)
)

(library
 (name list)
 (modules list))

(library
 (name array)
 (modules array))

(library
 (name tuple)
 (modules tuple))

(library
 (name string)
 (modules string))

(library
 (name pos)
 (preprocess (pps ppx_deriving.show ppx_deriving.ord))
 (modules pos))
